Add to Tomcat config